5555.	[bug]		server->reload_status was not properly initialised.
			[GL #2361]

5554.	[bug]		dnssec-signzone and dnssec-verify where missing
			newlines between log messages. [GL #2359]

5553.	[bug]		When reconfiguring named, removing "auto-dnssec"
			did not actually turn off DNSSEC maintenance.
			This has been fixed. [GL #2341]

5552.	[func]		When switching to "dnssec-policy none;", named
			now permits a safe transition to insecure mode
			and publishes the CDS and CDNSKEY DELETE
			records, as described in RFC 8078. [GL #1750]

5551.	[bug]		Only assign threads to CPUs in the CPU affinity set.
			Thanks to Ole Bjørn Hessen. [GL #2245]

5550.	[func]		Print a warning when falling back to the "increment" SOA
			serial method. [GL #2058]

5545.	[func]		OS support for load-balanced sockets is no longer
			required to receive incoming queries in multiple netmgr
			threads. [GL #2137]

5543.	[bug]		Fix UDP performance issues caused by making netmgr
			callbacks asynchronous-only. [GL #2320]

5542.	[bug]		Refactor netmgr. [GL #1920] [GL #2034] [GL #2061]
			[GL #2194] [GL #2221] [GL #2266] [GL #2283] [GL #2318]
			[GL #2321]

	--- 9.16.10 released ---

5544.	[func]		Restore the default value of "nocookie-udp-size" to 4096
			bytes. [GL #2250]

5541.	[func]		Adjust the "max-recursion-queries" default from 75 to
			100. [GL #2305]

5540.	[port]		Fix building with native PKCS#11 support for AEP Keyper.
			[GL #2315]

5539.	[bug]		Tighten handling of missing DNS COOKIE responses over
			UDP by falling back to TCP. [GL #2275]

5538.	[func]		Add NSEC3 support to KASP. A new option for
			"dnssec-policy", "nsec3param", can be used to set the
			desired NSEC3 parameters. NSEC3 salt collisions are
			automatically prevented during resalting. Salt
			generation is now logged with zone context. [GL #1620]

5534.	[bug]		The CNAME synthesized from a DNAME was incorrectly
			followed when the QTYPE was CNAME or ANY. [GL #2280]

	--- 9.16.9 released ---
